# bezier_curve_editor

./: .gitignore  CMakeLists.txt  README.md  launch.sh
assets/shaders/: construction.fs.glsl  construction.vs.glsl  curve.fs.glsl  curve.vs.glsl  edition.fs.glsl  edition.vs.glsl
include/: Curve.hpp  CurveRenderer.hpp  Examples.hpp  Shader.hpp
src/: Curve.cpp  CurveRenderer.cpp  main.cpp
